chore : - 메타 정보 추가 - 미사용 코드 삭제 - Pretendard GOV 폰트 cdn - 타이틀 수정 - noscript 코드 추가

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#3a96df" />
+    <meta
+      name="description"
+      content="진지잡수는 「노숙인 등의 복지 및 자립지원에 관한 법률」 등에 따라 국가예산으로 지방자치단체 및 공공기관이 직접 운영하거나, 관련 법인이나 사회단체가 예산을 받아서 운영하는 무료급식소에 대한 정보(무료급식차량 등은 장소가 명확하고 정기적인 운영일 경우 포함 / 교회 등에서 지방자치단체 예산을 받아 지역 무료급식소로 운영하는 경우 포함)를 활용하여 취약계층지원을 위해 개발한 서비스입니다. 데이터는 공공데이터포털에 등록된 전국무료급식소표준데이터를 활용하여 제공합니다."
+    />
+    <meta property="og:title" content="진지잡수" />
+    <meta
+      name="og:description"
+      content="진지잡수는 사회적취약계층을 위한 무료급식소 정보 제공 서비스입니다."
+    />
+    <!-- 추후에 이곳에 메타 이미지 추가 필요 -->
+    <meta property="og:image" content="" />
+    <!-- 추후에 이곳에 favicon.svg 추가 필요 -->
+    <link rel="icon" type="image/svg+xml" href="" />
+    <!-- Pretendard GOV 폰트 -->
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css"
+    />
+    <title>진지잡수 | 무료급식소 정보 제공 서비스</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>
+      이 앱을 실행하려면 JavaScript를 활성화해야 합니다. You need to enable
+      JavaScript to run this app.</noscript
+    >
   </body>
 </html>
