docs : noscript 태그 텍스트에 공백 제거

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <noscript>
-      이 앱을 실행하려면 JavaScript를 활성화해야 합니다. You need to enable
+    <noscript
+      >이 앱을 실행하려면 JavaScript를 활성화해야 합니다. You need to enable
       JavaScript to run this app.</noscript
     >
   </body>
