--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#3a96df" />
+    <meta name="theme-color" content="#0a82ae" />
     <meta
       name="description"
-      content="진지잡수는 「노숙인 등의 복지 및 자립지원에 관한 법률」 등에 따라 국가예산으로 지방자치단체 및 공공기관이 직접 운영하거나, 관련 법인이나 사회단체가 예산을 받아서 운영하는 무료급식소에 대한 정보(무료급식차량 등은 장소가 명확하고 정기적인 운영일 경우 포함 / 교회 등에서 지방자치단체 예산을 받아 지역 무료급식소로 운영하는 경우 포함)를 활용하여 취약계층지원을 위해 개발한 서비스입니다. 데이터는 공공데이터포털에 등록된 전국무료급식소표준데이터를 활용하여 제공합니다."
+      content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소 현황을 확인할 수 있는 서비스입니다. 데이터는 경기데이터드림에 등록된 「어르신무료급식소현황」 을 활용하여 제공합니다."
     />
     <meta property="og:title" content="진지잡수" />
     <meta
       name="og:description"
-      content="진지잡수는 사회적취약계층을 위한 무료급식소 정보 제공 서비스입니다."
+      content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소 현황을 확인할 수 있는 서비스입니다."
     />
-    <!-- 추후에 이곳에 메타 이미지 추가 필요 -->
-    <meta property="og:image" content="" />
-    <!-- 추후에 이곳에 favicon.svg 추가 필요 -->
-    <link rel="icon" type="image/svg+xml" href="" />
+    <meta property="og:image" content="https://i.ibb.co/LFTDBZd/meta-img.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <!-- Pretendard GOV 폰트 -->
     <link
       rel="stylesheet"
@@ -24,7 +22,8 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css"
     />
-    <title>진지잡수 | 무료급식소 정보 제공 서비스</title>
+    <link rel="manifest" href="/manifest.json" />
+    <title>진지잡수 | 경기도 내 어르신 대상 무료급식소 현황</title>
   </head>
   <body>
     <div id="root"></div>
