--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0a82ae" />
     <meta
       name="description"
-      content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소 현황을 확인할 수 있는 서비스입니다. 데이터는 경기데이터드림에 등록된 「어르신무료급식소현황」 을 활용하여 제공합니다."
+      content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소에 대한 시설명, 소재지주소, 급식시간, 휴무일, 운영정보 등의 현황을 확인할 수 있는 서비스입니다. 데이터는 경기데이터드림에 등록된 「어르신무료급식소현황」 을 활용하여 제공합니다."
     />
     <meta property="og:title" content="진지잡수" />
     <meta
