chore : prettier + eslint

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -20,7 +20,7 @@
       rel="stylesheet"
       as="style"
       crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov-dynamic-subset.min.css"
     />
     <link rel="manifest" href="/manifest.json" />
     <title>진지잡수 | 경기도 내 어르신 대상 무료급식소 현황</title>
@@ -29,8 +29,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <noscript
-      >이 앱을 실행하려면 JavaScript를 활성화해야 합니다. You need to enable
-      JavaScript to run this app.</noscript
+      >이 앱을 실행하려면 JavaScript를 활성화해야 합니다. You need to enable JavaScript to run this app.</noscript
     >
   </body>
 </html>
