refactor : 타이틀 수정

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov-dynamic-subset.min.css"
     />
     <link rel="manifest" href="/manifest.json" />
-    <title>진지잡수 | 경기도 내 어르신 대상 무료급식소 현황</title>
+    <title>진지잡수 - 경기도 내 어르신 대상 무료급식소 현황</title>
   </head>
   <body>
     <div id="root"></div>
