--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소 현황을 확인할 수 있는 서비스입니다."
     />
     <meta property="og:image" content="https://i.ibb.co/LFTDBZd/meta-img.png" />
+    <!-- 구글 서치 콘솔 -->
+    <meta name="google-site-verification" content="8nSVdXkP3eizZCxovfM0bD1YJfzkVk5nsixiDKjUHQk" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <!-- Pretendard GOV 폰트 -->
     <link
@@ -27,6 +29,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9d696410e57829f172bad3285bcdf9e6"
     ></script>
+    <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
     <title>진지잡수 - 경기도 내 어르신 대상 무료급식소 현황</title>
   </head>
