--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
       content="진지잡수는 경기도 내의 어르신을 대상으로 하는 무료급식소 현황을 확인할 수 있는 서비스입니다."
     />
     <meta property="og:image" content="https://i.ibb.co/LFTDBZd/meta-img.png" />
+    <!-- 구글 애널리틱스 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZFNR44D2C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+
+      gtag("config", "G-HZFNR44D2C")
+    </script>
     <!-- 구글 서치 콘솔 -->
     <meta name="google-site-verification" content="8nSVdXkP3eizZCxovfM0bD1YJfzkVk5nsixiDKjUHQk" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
